fixed some css issues on firefox, hid blocked users's messages

--- a/front/src/styles/ChatList.scss
+++ b/front/src/styles/ChatList.scss
@@ -16,7 +16,7 @@ $dark-gray: #919191;
 
 .channelList {
 	// background-color: red;
-	height: calc(100% - 80px);
+	height: calc(100% - 90px);
 	padding: 10px 0 10px 10px;
 	overflow-y: scroll;
 	position: relative;
